--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
+    "keen-slider": "^6.8.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
