--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
+    "react-tsparticles": "^2.12.2",
     "swiper": "^11.2.10",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
