--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,22 +15,25 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.11",
-    "framer-motion": "^12.23.6",
+    "@tsparticles/engine": "^3.8.1",
+    "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "keen-slider": "^6.8.6",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
-    "react-tsparticles": "^2.12.2",
+    "react-swipeable": "^7.0.2",
+    "react-tsparticles": "^2.11.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
-    "tsparticles": "^3.8.1"
+    "tsparticles": "^2.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
